--- a/feature/home/src/main/res/layout/home_activity.xml
+++ b/feature/home/src/main/res/layout/home_activity.xml
@@ -33,6 +33,7 @@
         android:gravity="center"
         android:text="@string/title_news"
         android:textColor="@color/uiWhite"
+        android:visibility="gone"
         app:finalCornerAngle="@dimen/dimens_40dp"
         app:initialCornerAngle="@dimen/dimens_40dp"
         app:spinning_bar_color="@color/uiOrange"
