--- a/feature/movie/src/main/res/layout/movies_activity.xml
+++ b/feature/movie/src/main/res/layout/movies_activity.xml
@@ -14,7 +14,7 @@
         android:paddingTop="@dimen/dimens_4dp"
         android:paddingBottom="@dimen/dimens_4dp"
         android:scrollbars="none"
-        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintBottom_toTopOf="@id/tvCategory"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toBottomOf="@id/toolbar" />
